--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yanko | Home</title>
   <script src="scripts/jquery.min.js"></script>
+  <link rel="stylesheet" href="stylesheets/augmented-ui.min.css" />
   <link rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
-<body></body>
+<body>
+  <div data-page="home" class="flex-col items-center justify-center">
+    <div class="text-8xl" style="mask: linear-gradient(white, transparent)">
+      yanko.dev
+    </div>
+    <div class="text-3xl" style="mask: linear-gradient(transparent, white)">
+      Ian Peřina
+    </div>
+    <!-- <span
+      class="text-8xl"
+      style="mask: radial-gradient(circle, white, transparent 25%)"
+      >•</span
+    > -->
+    <div class="links mt-4">
+      <a href="#">About</a>
+      <span>•</span>
+      <a href="#">Portfolio</a>
+      <span>•</span>
+      <a href="#">Skills</a>
+      <span>•</span>
+      <a href="#">Experience</a>
+    </div>
+  </div>
+</body>
