Remove padding from homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- What are you expecting to find here? -->
-  <div data-page="home" class="flex-col justify-center wipe">
+  <div data-page="home" class="flex-col justify-center wipe !p-0">
     <div
       class="text-6xl md:text-8xl"
       style="mask: linear-gradient(white, transparent)"
