--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             PCB design, including the
             <a
               href="https://electronic.perina.net/private/cv/Embedded%20Redacted.pdf"
+              title="Single-board computer project outline"
               target="_blank"
               >engineering of SBCs from scratch</a
             >, based on modern SoCs.
@@ -83,12 +84,14 @@
                   “Project A” -
                   <a
                     href="https://electronic.perina.net/private/cv/ProjectA-Dashboard.pdf"
+                    title="“Project A” Dashboard"
                     target="_blank"
                     >Dashboard</a
                   >
                   /
                   <a
                     href="https://electronic.perina.net/private/cv/ProjectA-User.pdf"
+                    title="“Project A” App"
                     target="_blank"
                     >App</a
                   >
@@ -97,12 +100,14 @@
                   “Project B” -
                   <a
                     href="https://electronic.perina.net/private/cv/ProjectB-Dashboard.pdf"
+                    title="“Project B” Dashboard"
                     target="_blank"
                     >Dashboard</a
                   >
                   /
                   <a
                     href="https://electronic.perina.net/private/cv/ProjectB-App.pdf"
+                    title="“Project B” App"
                     target="_blank"
                     >App</a
                   >
@@ -121,6 +126,7 @@
             Full list of acquired experience on pages 3 and 4 of my
             <a
               href="https://electronic.perina.net/private/cv/Europass%20Redacted.pdf"
+              title="Europass CV"
               target="_blank"
               >europass</a
             >
@@ -145,5 +151,17 @@
       </div>
     </div>
   </div>
+  <noscript>
+    <div class="text-6xl text-center pt-8">
+      this website needs javascript to work
+      <br />
+      (<a
+        href="https://electronic.perina.net/private/cv/Curriculum%20Vitæ.pdf"
+        title="Curriculum Vitæ - PDF"
+        target="_blank"
+        >pdf version</a
+      >)
+    </div>
+  </noscript>
   <script src="scripts/main.js" type="module"></script>
 </body>
