--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>loading</title>
+  <meta name="description" content="yanko's portfolio" />
+  <meta
+    name="keywords"
+    content="web development, UX/UI design, software engineer, portfolio, firmare, pcb, embedded"
+  />
+  <meta name="author" content="yanko / Ian Peřina" />
+  <title>yanko</title>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/EventEmitter.js"></script>
   <link rel="stylesheet" href="stylesheets/augmented-ui.min.css" />
