Ignore DS files Add facebook meta tags Add banner image

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="yanko's portfolio" />
+  <!-- Google / Search Engine Tags -->
+  <meta
+    name="description"
+    content="yanko's internet portfolio | software | firmware | hardware"
+  />
   <meta
     name="keywords"
-    content="web development, UX/UI design, software engineer, portfolio, firmare, pcb, embedded"
+    content="web development, UX/UI design, software engineer, portfolio, firmare, pcb, embedded, yanko.dev"
   />
   <meta name="author" content="yanko / Ian Peřina" />
-  <title>yanko</title>
+  <meta itemprop="image" content="images/banner.png" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://newyanko.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="yanko.dev" />
+  <meta
+    property="og:description"
+    content="yanko&#039;s internet portfolio | software | firmware | hardware"
+  />
+  <meta property="og:image" content="images/banner.png" />
+
+  <title>yanko.dev</title>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/EventEmitter.js"></script>
   <link rel="stylesheet" href="stylesheets/augmented-ui.min.css" />
