--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     content="web development, UX/UI design, software engineer, portfolio, firmare, pcb, embedded, yanko.dev"
   />
   <meta name="author" content="yanko / Ian Peřina" />
-  <meta itemprop="image" content="images/banner.png" />
+  <meta
+    itemprop="image"
+    content="https://newyanko.github.io/images/banner.png"
+  />
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://newyanko.github.io/" />
@@ -21,7 +24,10 @@
     property="og:description"
     content="yanko&#039;s internet portfolio | software | firmware | hardware"
   />
-  <meta property="og:image" content="images/banner.png" />
+  <meta
+    property="og:image"
+    content="https://newyanko.github.io/images/banner.png"
+  />
 
   <title>yanko.dev</title>
   <script src="scripts/jquery.min.js"></script>
