Consolidate slash styling Weaken grid colors

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         <ul>
           <li>Development of desktop apps using web technologies.</li>
           <li>
-            Communication with/NodeJS adapters for 3rd party hardware/firmware.
+            Communication with / NodeJS adapters for 3rd party hardware /
+            firmware.
           </li>
           <li>
             PCB design, including the
@@ -256,7 +257,7 @@
           Development</b
         >
         <ul>
-          <li>Warehouse/stock management software.</li>
+          <li>Warehouse / stock management software.</li>
           <li>
             Firmware for ESP32-based boards (mesh networks, USB commands, E-Ink
             displays).
