Add mouse click sound

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="yanko / Ian Peřina" />
   <meta
     itemprop="image"
-    content="https://newyanko.github.io/images/banner.png"
+    content="https://newyanko.github.io/media/banner.png"
   />
 
   <!-- Facebook Meta Tags -->
@@ -26,7 +26,7 @@
   />
   <meta
     property="og:image"
-    content="https://newyanko.github.io/images/banner.png"
+    content="https://newyanko.github.io/media/banner.png"
   />
 
   <title>yanko.dev</title>
@@ -279,5 +279,7 @@
       >)
     </div>
   </noscript>
+  <audio src="media/click-in.mp3" preload="auto" id="click-in"></audio>
+  <audio src="media/click-out.mp3" preload="auto" id="click-out"></audio>
   <script src="scripts/main.js" type="module"></script>
 </body>
