Add link to PDF-cv @ home

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       <a href="#skills">Skills</a>
       <span>•</span>
       <a href="#experience">Experience</a>
+      <span>•</span>
+      <a
+        href="https://electronic.perina.net/private/cv/Curriculum%20Vitæ.pdf"
+        title="Curriculum Vitæ - PDF"
+        target="_blank"
+        class="!no-underline"
+        >CV</a
+      >
     </div>
   </div>
   <div data-page="about" class="wipe-reverse flex-col">
