Add page anchor to europass Add placeholders Add skills + icons

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
   </div>
   <div data-page="about" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mask-down">About</div>
-    <p></p>
+    <p>
+      There is probably a lot to say here, I just haven't gotten to it yet
+      &lt;/&gt;
+    </p>
   </div>
   <div data-page="portfolio" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mask-down mb-2">Portfolio</div>
@@ -174,6 +177,40 @@
       </div>
     </div>
   </div>
+
+  <div data-page="skills" class="wipe-reverse flex-col">
+    <div class="text-8xl break-all mb-2 mask-down">Skills</div>
+    <div class="flex flex-col gap-4">
+      <i class="text-center">Programming Languages & Frameworks</i>
+      <div class="icon-list">
+        <div>
+          <img src="media/icon-javascript.svg" />
+          <p>JavaScript</p>
+        </div>
+        <div>
+          <img src="media/icon-typescript.svg" />
+          <p>TypeScript</p>
+        </div>
+        <div>
+          <img src="media/icon-nodejs.svg" />
+          <p>NodeJS</p>
+        </div>
+        <div>
+          <img src="media/icon-express-js.svg" />
+          <p>ExpressJS</p>
+        </div>
+        <div>
+          <img src="media/icon-react-native.svg" />
+          <p>ReactJS</p>
+        </div>
+        <div>
+          <img src="media/icon-tailwind-css.svg" />
+          <p>Tailwind CSS</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div data-page="experience" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mb-2 mask-down">Experience</div>
     <div class="flex flex-col gap-4">
@@ -249,7 +286,7 @@
           <li>
             Full list of acquired experience on pages 3 and 4 of my
             <a
-              href="https://electronic.perina.net/private/cv/Europass%20Redacted.pdf"
+              href="https://electronic.perina.net/private/cv/Europass%20Redacted.pdf#page=3"
               title="Europass CV"
               target="_blank"
               >europass</a
