--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Google / Search Engine Tags -->
   <meta
     name="description"
-    content="yanko's internet portfolio | software | firmware | hardware"
+    content="yanko's internet portfolio | software | firmware | hardware | embedded"
   />
   <meta
     name="keywords"
@@ -181,7 +181,7 @@
   <div data-page="skills" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mb-2 mask-down">Skills</div>
     <div class="flex flex-col gap-4">
-      <i class="text-center">Programming Languages & Frameworks</i>
+      <span class="text-center">Programming Languages & Frameworks</span>
       <div class="icon-list">
         <div>
           <img src="media/icon-javascript.svg" />
@@ -192,6 +192,18 @@
           <p>TypeScript</p>
         </div>
         <div>
+          <img src="media/icon-html.svg" />
+          <p>HTML</p>
+        </div>
+        <div>
+          <img src="media/icon-css.svg" />
+          <p>CSS</p>
+        </div>
+        <div>
+          <img src="media/icon-c.svg" />
+          <p>C / C++ (firmware)</p>
+        </div>
+        <div>
           <img src="media/icon-nodejs.svg" />
           <p>NodeJS</p>
         </div>
@@ -200,13 +212,24 @@
           <p>ExpressJS</p>
         </div>
         <div>
-          <img src="media/icon-react-native.svg" />
+          <img src="media/icon-react-native.svg" class="p-2" />
           <p>ReactJS</p>
+        </div>
+        <div>
+          <img src="media/icon-electron.svg" class="p-2" />
+          <p>Electron</p>
         </div>
         <div>
           <img src="media/icon-tailwind-css.svg" />
           <p>Tailwind CSS</p>
         </div>
+      </div>
+      <div class="text-center">
+        <span class="text-8xl">&</span>
+        <span>PCB + Schematic design</span>
+        <span class="text-4xl">,</span>
+        <span>Basic CAD / Blender modelling</span>
+        <span class="text-4xl">.</span>
       </div>
     </div>
   </div>
