Add LinkedIn link Add MongoDB to Skills

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       >---</span
     >
     <div class="links">
-      <a href="#about">About</a>
+      <a href="#about">About + Contact</a>
       <span>•</span>
       <a href="#portfolio">Portfolio</a>
       <span>•</span>
@@ -69,6 +69,13 @@
     <p>
       There is probably a lot to say here, I just haven't gotten to it yet
       &lt;/&gt;
+    </p>
+    <br />
+    <p>
+      Until I do, you can find me on
+      <a href="https://www.linkedin.com/in/yanko-dev/" target="_blank"
+        >LinkedIn</a
+      >
     </p>
   </div>
   <div data-page="portfolio" class="wipe-reverse flex-col">
@@ -175,6 +182,7 @@
           >Project outline</a
         >
       </div>
+      <span class="text-white/50 text-xs">(& this website btw)</span>
     </div>
   </div>
 
@@ -222,6 +230,10 @@
         <div>
           <img src="media/icon-tailwind-css.svg" />
           <p>Tailwind CSS</p>
+        </div>
+        <div>
+          <img src="media/icon-mongodb.svg" />
+          <p>MongoDB</p>
         </div>
       </div>
       <div class="text-center">
