Actually write the "About" section

--- a/index.html
+++ b/index.html
@@ -66,17 +66,43 @@
   </div>
   <div data-page="about" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mask-down">About</div>
-    <p>
-      There is probably a lot to say here, I just haven't gotten to it yet
-      &lt;/&gt;
-    </p>
-    <br />
-    <p>
-      Until I do, you can find me on
-      <a href="https://www.linkedin.com/in/yanko-dev/" target="_blank"
-        >LinkedIn</a
-      >
-    </p>
+    <div>
+      <p class="mb-2">
+        I believe that what I do is more relevant than who I am. Here are some
+        bullet points though:
+      </p>
+      <ul class="text-white/75">
+        <li>Born in Czech Republic, but I've always lived in Portugal</li>
+        <li>Fluent in English, Portuguese and Czech 🇬🇧🇵🇹🇨🇿</li>
+        <ul class="text-sm">
+          <li>Not-so-fluent in Spanish and Italian 🇪🇸🇮🇹</li>
+        </ul>
+        <li>❤️ travelling thru Europe</li>
+        <li>
+          Took IT in highschool (<a
+            href="https://aehn.pt/cursos-profissionais/tecnico-gestao-e-programacao-de-sistemas-informaticos"
+            target="_blank"
+            >PTGSPSI</a
+          >), though I had been tinkering with computers and Arduinos way before
+          that
+        </li>
+        <li>
+          I have a very deep and unfounded hate for PHP, and an unconditional
+          love for everything JS
+        </li>
+        <li>I work best with a challenge - boring is... well, boring</li>
+        <li>Fairly social</li>
+        <li>Quick learner (mostly by practice)</li>
+      </ul>
+      <br />
+      <p>
+        You can find me on
+        <a href="https://www.linkedin.com/in/yanko-dev/" target="_blank"
+          >LinkedIn</a
+        >, I have learned that putting my email on a website is not such a good
+        idea 🤖
+      </p>
+    </div>
   </div>
   <div data-page="portfolio" class="wipe-reverse flex-col">
     <div class="text-8xl break-all mask-down mb-2">Portfolio</div>
