Add modular bullet point to "About"

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
           I have a very deep and unfounded hate for PHP, and an unconditional
           love for everything JS
         </li>
+        <ul class="text-sm">
+          <li>
+            Big fan of modular coding - clean, easily maintained by multiple
+            collaborators, and easy to expand on
+          </li>
+        </ul>
         <li>I work best with a challenge - boring is... well, boring</li>
         <li>Fairly social</li>
         <li>Quick learner (mostly by practice)</li>
