Emphasis on "clean"

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </li>
         <ul class="text-sm">
           <li>
-            Big fan of modular coding - clean, easily maintained by multiple
-            collaborators, and easy to expand on
+            Big fan of modular coding - <b>clean</b>, easily maintained by
+            multiple collaborators, and easy to expand on
           </li>
         </ul>
         <li>I work best with a challenge - boring is... well, boring</li>
