Add availability to "About" Rename "About" to "About me"

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div data-page="about" class="wipe-reverse flex-col">
-    <div class="text-8xl break-all mask-down">About</div>
+    <div class="text-8xl break-all mask-down">About me</div>
     <div>
       <p class="mb-2">
         I believe that what I do is more relevant than who I am. Here are some
@@ -100,6 +100,18 @@
         <li>Fairly social</li>
         <li>Quick learner (mostly by practice)</li>
       </ul>
+      <br />
+      <p>
+        I am currently studying
+        <a href="https://www.ipleiria.pt/curso/musica-digital/" target="_blank"
+          >Musical Engineering</a
+        >
+        at <a href="https://www.ipleiria.pt/" target="_blank">IPLeiria</a>. This
+        means that I am available up to 15 hours / week, and can only work
+        remotely for the next 2 years. I can get a lot done in little time
+        though, this website took me ~3 hours to build, and most of it was
+        trying to come up with something to write.
+      </p>
       <br />
       <p>
         You can find me on
