Detail: attention to detail

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         <li>I work best with a challenge - boring is... well, boring</li>
         <li>Fairly social</li>
         <li>Quick learner (mostly by practice)</li>
+        <li>
+          <b>Big</b> attention to <span class="text-xs">d e t a i l</span>
+        </li>
       </ul>
       <br />
       <p>
