Add back button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     </div>
   </div>
   <div data-page="about" class="wipe-reverse flex-col">
-    <div class="text-8xl break-all mask-down">About me</div>
+    <div class="page-title">
+      <a></a>
+      <div>About me</div>
+    </div>
     <div>
       <p class="mb-2">
         I believe that what I do is more relevant than who I am. Here are some
@@ -112,22 +115,23 @@
         at <a href="https://www.ipleiria.pt/" target="_blank">IPLeiria</a>. This
         means that I am available up to 15 hours / week, and can only work
         remotely for the next 2 years. I can get a lot done in little time
-        though, this website took me ~3 hours to build, and most of it was
-        trying to come up with something to write.
+        though. For example, this website took me ~3 hours to build, most of it
+        was spent trying to come up with something to write.
       </p>
       <br />
       <p>
         You can find me on
         <a href="https://www.linkedin.com/in/yanko-dev/" target="_blank"
           >LinkedIn</a
-        >, I have learned that putting my email on a website is not such a good
-        idea 🤖
+        >, I know better than putting my email on a public website 🤖
       </p>
     </div>
   </div>
   <div data-page="portfolio" class="wipe-reverse flex-col">
-    <div class="text-8xl break-all mask-down mb-2">Portfolio</div>
-
+    <div class="page-title">
+      <a></a>
+      <div>Portfolio</div>
+    </div>
     <div class="flex flex-col gap-4">
       <div class="experience">
         <i>Q2 2024</i>
@@ -234,7 +238,10 @@
   </div>
 
   <div data-page="skills" class="wipe-reverse flex-col">
-    <div class="text-8xl break-all mb-2 mask-down">Skills</div>
+    <div class="page-title">
+      <a></a>
+      <div>Skills</div>
+    </div>
     <div class="flex flex-col gap-4">
       <span class="text-center">Programming Languages & Frameworks</span>
       <div class="icon-list">
@@ -294,7 +301,10 @@
   </div>
 
   <div data-page="experience" class="wipe-reverse flex-col">
-    <div class="text-8xl break-all mb-2 mask-down">Experience</div>
+    <div class="page-title">
+      <a></a>
+      <div>Experience</div>
+    </div>
     <div class="flex flex-col gap-4">
       <div class="experience">
         <i>September 2023 - September 2024</i>
