Add IoT mention in Skills

--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
       </div>
       <div class="text-center">
         <span class="text-8xl">&</span>
+        <span>IoT</span>
+        <span class="text-4xl">,</span>
         <span>PCB + Schematic design</span>
         <span class="text-4xl">,</span>
         <span>Basic CAD / Blender modelling</span>
